--- a/index.html
+++ b/index.html
@@ -100,6 +100,6 @@ There are some basic rules of this game that make it more interesting.<br><br>
     </footer><br>
 </center>
 
-         <script src="style.css"></script>
+         <script src="script.js"></script>
      </body>
 </html>
